<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		launch_screen
	 *	@date 		Saturday 03rd of September 2022 02:54:17 PM
	 *	@title 		Design
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/the_talent" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >





			<RelativeLayout android:id="@+id/page_the_talent_ek2"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__the_talent_ek3"
					android:background="@drawable/_bg__the_talent_ek3_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="375dp"
					android:layout_height="812dp" />

				<ImageView android:id="@+id/union_ek13"
					android:src="@drawable/union_ek13"
					android:contentDescription="union_ek13"
					 android:layout_marginStart="346dp"
					android:layout_marginTop="-994dp"
					android:layout_width="384.5dp"
					android:layout_height="911dp" />

				<ImageView android:id="@+id/union_ek14"
					android:src="@drawable/union_ek14"
					android:contentDescription="union_ek14"
					 android:layout_marginStart="-455dp"
					android:layout_marginTop="467dp"
					android:layout_width="506.5dp"
					android:layout_height="911dp" />

				<ImageView android:id="@+id/union_ek15"
					android:src="@drawable/union_ek15"
					android:contentDescription="union_ek15"
					 android:layout_marginStart="-341dp"
					android:layout_marginTop="215dp"
					android:layout_width="341dp"
					android:layout_height="613.33dp" />

				<View   android:id="@+id/rectangle"
					android:background="@drawable/rectangle_shape"
					 android:layout_marginStart="32dp"
					android:layout_marginTop="611dp"
					android:layout_width="298dp"
					android:layout_height="72dp" />


				<RelativeLayout android:id="@+id/group_10_ek3"
					android:layout_marginTop="24dp"
					android:layout_marginStart="24dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group_8_ek5"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/subtract_ek5"
							android:src="@drawable/subtract_ek5"
							android:contentDescription="subtract_ek5"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="20.25dp"
							android:layout_height="28dp" />

						<View   android:id="@+id/ellipse_3_ek5"
							android:background="@drawable/ellipse_3_ek5_shape"
							 android:layout_marginStart="4dp"
							android:layout_marginTop="5dp"
							android:layout_width="1.84dp"
							android:layout_height="1.73dp" />

						<View   android:id="@+id/ellipse_4_ek5"
							android:background="@drawable/ellipse_4_ek5_shape"
							 android:layout_marginStart="14dp"
							android:layout_marginTop="4dp"
							android:layout_width="1.84dp"
							android:layout_height="1.73dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/the_talent_ek4"
					android:layout_marginTop="71dp"
					android:layout_marginStart="65dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/talent_hub_ek1"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="40.62sp"
						android:textColor="@color/talent_hub_color"
						android:layout_marginLeft="-7dp"
						android:layout_marginTop="0dp"
						android:layout_width="271.1376915741dp"
						android:layout_height="77.307691574097dp"
						android:text="@string/talent_hub_ek1_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/saly_19"
					android:layout_marginTop="480dp"
					android:layout_marginStart="50dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/_1_1"
						android:src="@drawable/_1_1"
						android:contentDescription="_1_1"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="275dp"
						android:layout_height="275dp" />

				</RelativeLayout>

				<View   android:id="@+id/ellipse_6"
					android:background="@drawable/ellipse_6_shape"
					 android:layout_marginStart="-44dp"
					android:layout_marginTop="138dp"
					android:layout_width="111dp"
					android:layout_height="111dp" />

				<View   android:id="@+id/ellipse_7"
					android:background="@drawable/ellipse_7_shape"
					 android:layout_marginStart="79dp"
					android:layout_marginTop="138dp"
					android:layout_width="111dp"
					android:layout_height="111dp" />

				<View   android:id="@+id/ellipse_8"
					android:background="@drawable/ellipse_8_shape"
					 android:layout_marginStart="202dp"
					android:layout_marginTop="138dp"
					android:layout_width="111dp"
					android:layout_height="111dp" />

				<View   android:id="@+id/ellipse_9"
					android:background="@drawable/ellipse_9_shape"
					 android:layout_marginStart="325dp"
					android:layout_marginTop="138dp"
					android:layout_width="111dp"
					android:layout_height="111dp" />

				<TextView android:id="@+id/artists"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="22sp"
					android:textColor="@color/talent_hub_color"
					android:layout_marginLeft="100dp"
					android:layout_marginTop="180dp"
					android:layout_width="76dp"
					android:layout_height="41dp"
					android:text="@string/artists_string"
					 />

				<TextView android:id="@+id/poets"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="22sp"
					android:textColor="@color/talent_hub_color"
					android:layout_marginLeft="-20dp"
					android:layout_marginTop="180dp"
					android:layout_width="76dp"
					android:layout_height="41dp"
					android:text="@string/poets_string"
					 />

				<TextView android:id="@+id/musicians"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="22sp"
					android:textColor="@color/talent_hub_color"
					android:layout_marginLeft="214dp"
					android:layout_marginTop="180dp"
					android:layout_width="93dp"
					android:layout_height="41dp"
					android:text="@string/musicians_string"
					 />

				<TextView android:id="@+id/dancers"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="22sp"
					android:textColor="@color/talent_hub_color"
					android:layout_marginLeft="332dp"
					android:layout_marginTop="180dp"
					android:layout_width="93dp"
					android:layout_height="41dp"
					android:text="@string/dancers_string"
					 />

			</RelativeLayout>


			<RelativeLayout android:id="@+id/page_the_talent_ek6"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__the_talent_ek7"
					android:background="@drawable/_bg__the_talent_ek7_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="375dp"
					android:layout_height="812dp" />

				<ImageView android:id="@+id/union_ek16"
					android:src="@drawable/union_ek16"
					android:contentDescription="union_ek16"
					 android:layout_marginStart="346dp"
					android:layout_marginTop="-994dp"
					android:layout_width="384.5dp"
					android:layout_height="911dp" />

				<ImageView android:id="@+id/union_ek17"
					android:src="@drawable/union_ek17"
					android:contentDescription="union_ek17"
					 android:layout_marginStart="-455dp"
					android:layout_marginTop="467dp"
					android:layout_width="506.5dp"
					android:layout_height="911dp" />

				<ImageView android:id="@+id/union_ek18"
					android:src="@drawable/union_ek18"
					android:contentDescription="union_ek18"
					 android:layout_marginStart="-341dp"
					android:layout_marginTop="215dp"
					android:layout_width="341dp"
					android:layout_height="613.33dp" />

				<View   android:id="@+id/rectangle_ek1"
					android:background="@drawable/rectangle_ek1_shape"
					 android:layout_marginStart="32dp"
					android:layout_marginTop="611dp"
					android:layout_width="298dp"
					android:layout_height="72dp" />


				<RelativeLayout android:id="@+id/group_10_ek4"
					android:layout_marginTop="24dp"
					android:layout_marginStart="24dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group_8_ek6"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<ImageView android:id="@+id/subtract_ek6"
							android:src="@drawable/subtract_ek6"
							android:contentDescription="subtract_ek6"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="20.25dp"
							android:layout_height="28dp" />

						<View   android:id="@+id/ellipse_3_ek6"
							android:background="@drawable/ellipse_3_ek6_shape"
							 android:layout_marginStart="4dp"
							android:layout_marginTop="5dp"
							android:layout_width="1.84dp"
							android:layout_height="1.73dp" />

						<View   android:id="@+id/ellipse_4_ek6"
							android:background="@drawable/ellipse_4_ek6_shape"
							 android:layout_marginStart="14dp"
							android:layout_marginTop="4dp"
							android:layout_width="1.84dp"
							android:layout_height="1.73dp" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout android:id="@+id/the_talent_ek8"
					android:layout_marginTop="71dp"
					android:layout_marginStart="65dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/talent_hub_ek2"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="40.62sp"
						android:textColor="@color/talent_hub_color"
						android:layout_marginLeft="-7dp"
						android:layout_marginTop="0dp"
						android:layout_width="271.1376915741dp"
						android:layout_height="77.307691574097dp"
						android:text="@string/talent_hub_ek2_string"
						 />

				</RelativeLayout>

				<View   android:id="@+id/ellipse_6_ek1"
					android:background="@drawable/ellipse_6_ek1_shape"
					 android:layout_marginStart="-44dp"
					android:layout_marginTop="138dp"
					android:layout_width="111dp"
					android:layout_height="111dp" />

				<View   android:id="@+id/ellipse_7_ek1"
					android:background="@drawable/ellipse_7_ek1_shape"
					 android:layout_marginStart="79dp"
					android:layout_marginTop="138dp"
					android:layout_width="111dp"
					android:layout_height="111dp" />

				<View   android:id="@+id/ellipse_8_ek1"
					android:background="@drawable/ellipse_8_ek1_shape"
					 android:layout_marginStart="202dp"
					android:layout_marginTop="138dp"
					android:layout_width="111dp"
					android:layout_height="111dp" />

				<View   android:id="@+id/ellipse_9_ek1"
					android:background="@drawable/ellipse_9_ek1_shape"
					 android:layout_marginStart="325dp"
					android:layout_marginTop="138dp"
					android:layout_width="111dp"
					android:layout_height="111dp" />

				<TextView android:id="@+id/artists_ek1"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="22sp"
					android:textColor="@color/mr_x_ek1_color"
					android:layout_marginLeft="100dp"
					android:layout_marginTop="180dp"
					android:layout_width="76dp"
					android:layout_height="41dp"
					android:text="@string/artists_ek1_string"
					 />

				<TextView android:id="@+id/musicians_ek1"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="22sp"
					android:textColor="@color/mr_x_ek1_color"
					android:layout_marginLeft="214dp"
					android:layout_marginTop="180dp"
					android:layout_width="93dp"
					android:layout_height="41dp"
					android:text="@string/musicians_ek1_string"
					 />

				<TextView android:id="@+id/dancers_ek1"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="22sp"
					android:textColor="@color/mr_x_ek1_color"
					android:layout_marginLeft="332dp"
					android:layout_marginTop="180dp"
					android:layout_width="93dp"
					android:layout_height="41dp"
					android:text="@string/dancers_ek1_string"
					 />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>